2021-01-18         Manuel Collado        <m-collado@users.sourceforge.net>

	* index.html, template.html: Update Copyright date.

2021-01-18         Manuel Collado        <m-collado@users.sourceforge.net>

	* makeweb.awk, makeweb-any.sh: Detect errors and give messages.

2021-01-13         Manuel Collado       <m-collado@users.sourceforge.net>

	* gawkextlib.css: Minor style changes.
    * template.html: Add requirements line. Update Copyright date.
    * index.html: Add new extensions. Update Copyright date.
    * makeweb.awk: Limit included text. Detect dependencies.

2018-04-11         Manuel Collado       <m-collado@users.sourceforge.net>

	* make_sftp.awk: Fix wrong header comments.

2018-04-09         Manuel Collado       <m-collado@users.sourceforge.net>

	* index.html, template.html: Fix errata.
	* make_sftp.awk: Added auxiliary script to be used by publish.sh.

2018-04-08         Manuel Collado       <m-collado@users.sourceforge.net>

	* index.html, gawkextlib.css: Global rebuild of the home page.
	* template.html: Cosmetic change.

2018-04-07         Manuel Collado       <m-collado@users.sourceforge.net>

	* makeweb-*.sh, gawkextlib.css: Add style to all generated pages
	  and HTML documents.

2018-04-05         Manuel Collado       <m-collado@users.sourceforge.net>

	* makeweb-md.sh: Reduce margins of PDF documents generated by pandoc.
	* gawkextlib.css: Boxed <pre> elements.

2018-03-16         Manuel Collado       <m-collado@users.sourceforge.net>

	* makeweb.awk (include_text): Escape reserved chars. Do not reflow
	lines of dashes.

2018-03-15         Manuel Collado       <m-collado@users.sourceforge.net>

	* makeweb.awk: Open external links in a new window. Fix blank lines
	handling.

2018-03-15         Manuel Collado       <m-collado@users.sourceforge.net>

	* makeweb.awk, template.html: Generate a summary section
	from %description in the package spec.

2018-03-08         Manuel Collado       <m-collado@users.sourceforge.net>
