@@ -19,7 +19,8 @@ p.version {text-align: center}
 /* general */
 h2, h3 {margin-bottom: 0}
 h2+p, h3+p {margin-top: 0.5em}
-pre, code {font-size: 120%}
+pre, code {font-size: 110%}
+pre code {font-size: 100%}
 
 /* from GNU style.css */
 html { background-color: #e7e7e7; }
