@@ -21,20 +21,19 @@
       </ul><h3 style="margin-top: 0">Available extensions</h3><ul>
         <li><a href="abort/abort.html">abort</a></li>
         <li><a href="aregex/aregex.html">aregex</a></li>
-        <li><a href="csv/csv.html">csv</a> (not yet released)</li>
+        <li><a href="csv/csv.html">csv</a></li>
         <li><a href="errno/errno.html">errno</a></li>
         <li><a href="gd/gd.html">gd</a></li>
         <li><a href="haru/haru.html">haru</a></li>
         <li><a href="json/json.html">json</a></li>
         <li><a href="lmdb/lmdb.html">lmdb</a></li>
         <li><a href="mbs/mbs.html">mbs</a></li>
-        <li><a href="mpfr/mpfr.html">mpfr</a> (experimental)</li>
+        <li><a href="mpfr/mpfr.html">mpfr</a></li>
         <li><a href="nl_langinfo/nl_langinfo.html">nl_langinfo</a></li>
         <li><a href="pgsql/pgsql.html">pgsql</a></li>
         <li><a href="reclen/reclen.html">reclen</a></li>
         <li><a href="redis/redis.html">redis</a></li>
         <li><a href="select/select.html">select</a></li>
-        <li><a href="timex/timex.html">timex</a></li>
         <li><a href="xml/xml.html">xml</a></li>
         <li><a href="lib/lib.html">gawkextlib</a> <i>base library</i></li>
       </ul></div></div>
